Se incorpora interacción con API OpenAI exitosamente desde un hub signalr llamado desde angular

--- a/Backend/NetOpenAI_1/NetOpenAI_1/appsettings.json
+++ b/Backend/NetOpenAI_1/NetOpenAI_1/appsettings.json
@@ -8,18 +8,18 @@
   "AllowedHosts": "*",
   "AppSettings": {
     "GoogleAuth": {
-      "ClientId": "TU_CLIENT_ID",
-      "ClientSecret": "TU_CLIENT_SECRET"
+      "ClientId": "YOUR_CLIENT_ID",
+      "ClientSecret": "YOUR_CLIENT_SECRET"
     },
     "JwtSettings": {
-      "SecretKey": "UnaClaveSuperSecretaParaJWT"
+      "SecretKey": "SECRETKEY_TO_JWT"
     },
     "OpenAI": {
-      "ApiKey": "TU_CLAVE_OPENAI",
+      "ApiKey": "YOUR_APIKEY_OPENAI",
       "Model": "gpt-4o-mini"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=db;Uid=root;Pwd=clave;SslMode=Required;"
+    "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=db;Uid=root;Pwd=password;SslMode=Required;"
   }
 }
